@@ -17,10 +17,14 @@
 
 package org.jivesoftware.smackx.workgroup.settings;
 
-import org.jivesoftware.smackx.workgroup.util.ModelUtil;
+import java.io.IOException;
+
 import org.jivesoftware.smack.packet.IQ;
+import org.jivesoftware.smack.packet.XmlEnvironment;
 import org.jivesoftware.smack.provider.IQProvider;
-import org.xmlpull.v1.XmlPullParser;
+import org.jivesoftware.smack.util.StringUtils;
+import org.jivesoftware.smack.xml.XmlPullParser;
+import org.jivesoftware.smack.xml.XmlPullParserException;
 
 public class WorkgroupProperties extends IQ {
 
@@ -63,56 +67,54 @@ public class WorkgroupProperties extends IQ {
 
 
     /**
-     * Element name of the packet extension.
+     * Element name of the stanza extension.
      */
     public static final String ELEMENT_NAME = "workgroup-properties";
 
     /**
-     * Namespace of the packet extension.
+     * Namespace of the stanza extension.
      */
     public static final String NAMESPACE = "http://jivesoftware.com/protocol/workgroup";
 
-    public String getChildElementXML() {
-        StringBuilder buf = new StringBuilder();
+    public WorkgroupProperties() {
+        super(ELEMENT_NAME, NAMESPACE);
+    }
 
-        buf.append("<").append(ELEMENT_NAME).append(" xmlns=");
-        buf.append('"');
-        buf.append(NAMESPACE);
-        buf.append('"');
-        if (ModelUtil.hasLength(getJid())) {
+    @Override
+    protected IQChildElementXmlStringBuilder getIQChildElementBuilder(IQChildElementXmlStringBuilder buf) {
+        if (StringUtils.isNotEmpty(getJid())) {
             buf.append("jid=\"" + getJid() + "\" ");
         }
-        buf.append("></").append(ELEMENT_NAME).append("> ");
-        return buf.toString();
+        buf.setEmptyElement();
+        return buf;
     }
 
     /**
-     * Packet extension provider for SoundSetting Packets.
+     * Stanza extension provider for SoundSetting Packets.
      */
-    public static class InternalProvider implements IQProvider {
+    public static class InternalProvider extends IQProvider<WorkgroupProperties> {
 
-        public IQ parseIQ(XmlPullParser parser) throws Exception {
-            if (parser.getEventType() != XmlPullParser.START_TAG) {
-                throw new IllegalStateException("Parser not in proper position, or bad XML.");
-            }
-
+        @Override
+        public WorkgroupProperties parse(XmlPullParser parser, int initialDepth, XmlEnvironment xmlEnvironment) throws XmlPullParserException, IOException {
             WorkgroupProperties props = new WorkgroupProperties();
 
             boolean done = false;
 
 
             while (!done) {
-                int eventType = parser.next();
-                if ((eventType == XmlPullParser.START_TAG) && ("authRequired".equals(parser.getName()))) {
-                    props.setAuthRequired(new Boolean(parser.nextText()).booleanValue());
+                XmlPullParser.Event eventType = parser.next();
+                if (eventType == XmlPullParser.Event.START_ELEMENT && "authRequired".equals(parser.getName())) {
+                    // CHECKSTYLE:OFF
+                    props.setAuthRequired(Boolean.valueOf(parser.nextText()).booleanValue());
+                    // CHECKSTYLE:ON
                 }
-                else if ((eventType == XmlPullParser.START_TAG) && ("email".equals(parser.getName()))) {
+                else if (eventType == XmlPullParser.Event.START_ELEMENT && "email".equals(parser.getName())) {
                     props.setEmail(parser.nextText());
                 }
-                else if ((eventType == XmlPullParser.START_TAG) && ("name".equals(parser.getName()))) {
+                else if (eventType == XmlPullParser.Event.START_ELEMENT && "name".equals(parser.getName())) {
                     props.setFullName(parser.nextText());
                 }
-                else if (eventType == XmlPullParser.END_TAG && "workgroup-properties".equals(parser.getName())) {
+                else if (eventType == XmlPullParser.Event.END_ELEMENT && "workgroup-properties".equals(parser.getName())) {
                     done = true;
                 }
             }
